--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -14,7 +14,7 @@ repository = "https://github.com/DelSkayn/rquickjs.git"
 features = ["full-async", "doc-cfg"]
 
 [dependencies]
-rquickjs-sys = { workspace = true }
+rquickjs-sys = { workspace = true, package = "deft-rquickjs-sys" }
 phf = { version = "0.11", optional = true }
 indexmap = { version = "2", optional = true }
 either = { version = "1", optional = true }
