--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rquickjs-sys"
+name = "deft-rquickjs-sys"
 version = "0.9.0"
 authors = ["Mees Delzenne <mees.delzenne@gmail.com>"]
 edition = "2021"
