--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,24 @@ env:
   SHELL: /bin/bash
 
 jobs:
+  ci-linux:
+    name: Linux
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+      - name: Install
+        run: |
+          sudo apt-get update
+          sudo apt-get install build-essential libssl-dev libclang-dev libc++-dev xorg-dev libdbus-1-dev libxcb-xfixes0-dev libxcb-shape0-dev libasound2-dev libegl-dev libgles-dev librust-wayland-egl-dev;
+      - name: Build
+        run: cargo build
+      - name: Tests
+        run: cargo test
+
   ci-wasm:
     name: Wasm
     runs-on: ubuntu-latest
