--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,6 @@ jobs:
         run: |
           rustup target add wasm32-unknown-emscripten
       - name: Build
-        run: cd sys && cargo build --target wasm32-unknown-emscripten
+        run: |
+          git submodule update --init
+          cd sys && cargo build --target wasm32-unknown-emscripten
